Added CustomGlobalExceptionHandler class + validation for existing DTO classes

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>liquibase-maven-plugin</artifactId>
             <version>${liquibase.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.1.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
