use @NotBlank insteaf of NotNull for string, also length instead of size, use Spring BeanWrapperImpl, fixed minor bugs with liquibase...

--- a/src/main/resources/db/changelog/changes/01-create-user-table.yaml
+++ b/src/main/resources/db/changelog/changes/01-create-user-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: daniil
       changes:
         - createTable:
-            tableName: user
+            tableName: users
             columns:
               - column:
                   name: id
