use only notblank annotation in user class + fix id name in liquibase

--- a/src/main/resources/db/changelog/changes/01-create-user-table.yaml
+++ b/src/main/resources/db/changelog/changes/01-create-user-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-user-table
+      id: create-users-table
       author: daniil
       changes:
         - createTable:
