--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.mvc.servlet.path=/api
+
+jwt.expiration=300000
+jwt.secret=secretdbookdlineonvfcpwepovjpowevjcwopejhvc9
