--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -22,3 +22,9 @@ databaseChangeLog:
 
   - include:
       file: db/changelog/changes/08-add-is-deleted-column-to-users.yaml
+
+  - include:
+      file: db/changelog/changes/09-add-category-table.yaml
+
+  - include:
+      file: db/changelog/changes/10-add-book-category-table.yaml
