changed liquibases name, put @PreAuthorize annnotation under the methods, add lombok annotation such as Positive in createcartitemrequestdto + table, changed deprecated method where, split the logic of updating the item for more clarity, added a check that if the shopping cart already exists, we just add items to it, added one void method createShoppingCart and use it in serviceimpl and userservice

--- a/src/main/resources/db/changelog/changes/11-create-shopping-cart-table.yaml
+++ b/src/main/resources/db/changelog/changes/11-create-shopping-cart-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: daniil
       changes:
         - createTable:
-            tableName: shopping_cart
+            tableName: shopping_carts
             columns:
               - column:
                   name: id
@@ -24,7 +24,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
         - addForeignKeyConstraint:
-            baseTableName: shopping_cart
+            baseTableName: shopping_carts
             baseColumnNames: user_id
             constraintName: fk_shopping_cart_user
             referencedTableName: users
