--- a/src/main/resources/db/changelog/changes/12-create-cart-item-table.yaml
+++ b/src/main/resources/db/changelog/changes/12-create-cart-item-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: daniil
       changes:
         - createTable:
-            tableName: cart_item
+            tableName: cart_items
             columns:
               - column:
                   name: id
@@ -28,13 +28,13 @@ databaseChangeLog:
                   constraints:
                     nullable: false
         - addForeignKeyConstraint:
-            baseTableName: cart_item
+            baseTableName: cart_items
             baseColumnNames: shopping_cart_id
             constraintName: fk_cart_item_shopping_cart
-            referencedTableName: shopping_cart
+            referencedTableName: shopping_carts
             referencedColumnNames: id
         - addForeignKeyConstraint:
-            baseTableName: cart_item
+            baseTableName: cart_items
             baseColumnNames: book_id
             constraintName: fk_cart_item_book
             referencedTableName: book
