--- a/src/main/resources/db/changelog/changes/9-create-shopping-cart-table.yaml
+++ b/src/main/resources/db/changelog/changes/9-create-shopping-cart-table.yaml
@@ -17,15 +17,10 @@ databaseChangeLog:
                   type: BIGINT
                   constraints:
                     nullable: false
+                    unique: true
               - column:
                   name: is_deleted
                   type: boolean
                   defaultValueBoolean: false
                   constraints:
                     nullable: false
-        - addForeignKeyConstraint:
-            baseTableName: shopping_carts
-            baseColumnNames: user_id
-            constraintName: fk_shopping_cart_user
-            referencedTableName: users
-            referencedColumnNames: id
