added swagger to all aontrollers, added liquibase for two tables, implmeneted full order logic (two models + dtos + mappers + service + serviceimpl + controller + repos) + question! what about rolerepo? we dont use it anywhere so i dont have the roles saved automatically, you told me that we will use it later but its the last task

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -28,3 +28,9 @@ databaseChangeLog:
 
   - include:
       file: db/changelog/changes/10-create-cart-item-table.yaml
+
+  - include:
+      file: db/changelog/changes/11-create-orders-table.yaml
+
+  - include:
+      file: db/changelog/changes/12-create-order-items-table.yaml
