--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=book-store
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Danil2704@
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=Danil2704@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
