--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ MYSQLDB_DOCKER_PORT=3306
 SPRING_LOCAL_PORT=8088
 SPRING_DOCKER_PORT=8080
 DEBUG_PORT=5005
+
+JWT_EXPIRATION=300000
+JWT_SECRET=secretdbookdlineonvfcpwepovjpowevjcwopejhvc9
