--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,8 @@ services:
     restart: unless-stopped
     env_file: ./.env
     environment:
-      - MYSQLDB_USER=$MYSQLDB_USER
-      - MYSQLDB_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - MYSQLDB_DATABASE=$MYSQLDB_DATABASE
+      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+      - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     healthcheck:
@@ -32,6 +31,8 @@ services:
         "spring.datasource.url": "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE",
         "spring.datasource.username": "$MYSQLDB_USER",
         "spring.datasource.password": "$MYSQLDB_ROOT_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQLDialect"
+        "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQLDialect",
+        "jwt.expiration": "$JWT_EXPIRATION",
+        "jwt.secret": "$JWT_SECRET"
       }'
       JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
