--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=book-store
+spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQLDB_DATABASE}?serverTimezone=UTC
+spring.datasource.username=${MYSQLDB_USER}
+spring.datasource.password=${MYSQLDB_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
@@ -7,3 +10,6 @@ spring.jpa.show-sql=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.mvc.servlet.path=/api
+
+jwt.expiration=${JWT_EXPIRATION}
+jwt.secret=${JWT_SECRET}
