--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=optional:file:.env[.properties]
+
 spring.application.name=book-store
 spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQLDB_DATABASE}?serverTimezone=UTC
 spring.datasource.username=${MYSQLDB_USER}
