--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,8 @@
 spring.config.import=optional:file:.env[.properties]
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:tc:mysql:8:///book_store
+spring.datasource.username=test
+spring.datasource.password=test
 
 jwt.expiration=${JWT_EXPIRATION}
 jwt.secret=${JWT_SECRET}
